--- a/goldenTicket/package.json
+++ b/goldenTicket/package.json
@@ -12,6 +12,12 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
+    "json2csv": "^4.5.1",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
+    "node-cron": "^2.0.3",
+    "promise-mysql": "^4.0.4",
+    "rand-token": "^0.4.0",
     "morgan": "~1.9.0",
     "nodemon": "^1.19.1"
   }
