--- a/goldenTicket/package.json
+++ b/goldenTicket/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "aws-sdk": "^2.485.0",
     "cookie-parser": "~1.4.3",
     "csvtojson": "^2.0.10",
     "debug": "~2.6.9",
@@ -15,10 +16,12 @@
     "json2csv": "^4.5.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
-    "node-cron": "^2.0.3",
-    "promise-mysql": "^4.0.4",
-    "rand-token": "^0.4.0",
     "morgan": "~1.9.0",
-    "nodemon": "^1.19.1"
+    "multer": "^1.4.1",
+    "multer-s3": "^2.9.0",
+    "node-cron": "^2.0.3",
+    "nodemon": "^1.19.1",
+    "promise-mysql": "^4.0.4",
+    "rand-token": "^0.4.0"
   }
 }
