--- a/goldenTicket/package.json
+++ b/goldenTicket/package.json
@@ -11,6 +11,7 @@
     "csvtojson": "^2.0.10",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "fcm-node": "^1.5.1",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "json2csv": "^4.5.1",
