--- a/goldenTicket/package.json
+++ b/goldenTicket/package.json
@@ -23,6 +23,7 @@
     "node-cron": "^2.0.3",
     "nodemon": "^1.19.1",
     "promise-mysql": "^4.0.4",
-    "rand-token": "^0.4.0"
+    "rand-token": "^0.4.0",
+    "request": "^2.88.0"
   }
 }
