--- a/goldenTicket/package.json
+++ b/goldenTicket/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "fcm-node": "^1.5.1",
+    "helmet": "^3.18.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "json2csv": "^4.5.1",
